[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cats"
description = "CATS: Cluster Analysis of Trimmed Spectrograms"

license = {file = "LICENSE.md"}
readme = "README.md"
dynamic = ["dependencies", "version"]
requires-python = ">=3.9"

authors = [
    { name = "Serafim Grubas", email = "serafimgrubas@gmail.com" }
]

keywords = ["Signal processing", "Detection", "Denoising", "Noise estimation",
            "Clustering", "Signal recognition", "Signal classification",
            "Spectrogram", "Time-Frequency", "Sparse", "Earthquake", "Voice"]
classifiers = [
    "Development Status :: Beta",
    "Intended Audience :: Geophysics",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering"
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "cats.__version__"}

[project.urls]
homepage = "https://github.com/sgrubas/cats"
repository = "https://github.com/sgrubas/cats"

[tool.setuptools.packages.find]
include = ["cats*"]

[tool.setuptools.package-data]
"data" = ["*.zip", "pretuned/*.pickle"]

[project.optional-dependencies]
jup = ["jupyterlab==4.2.5"]
